force-app/main/default/objects/Apttus_Config2__ProductFeatureValue__c/Apttus_Config2__ProductFeatureValue__c.object-meta.xml
<CustomObject>
    <label>Product Feature Value</label>
    <nameField>
        <displayFormat>PFV-{0}</displayFormat>
        <label>Product Feature Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Feature Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>