force-app/main/default/objects/Apttus_Config2__ProductFeatureValue__c/fields/Apttus_Config2__FeatureId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FeatureId__c</fullName>
    <label>Feature</label>
    <referenceTo>Apttus_Config2__Feature__c</referenceTo>
    <relationshipLabel>Product Feature Values</relationshipLabel>
    <relationshipName>ProductFeatureValues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>