force-app/main/default/objects/Apttus_Config2__ProductFeatureValue__c/fields/Apttus_Config2__IsIncluded__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsIncluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsIncluded</label>
    <type>Checkbox</type>
</CustomField>