force-app/main/default/objects/Apttus_Config2__ProductFeatureValue__c/fields/Apttus_Config2__Value__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Value__c</fullName>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>